[gd_scene load_steps=4 format=3 uid="uid://c1ayyyqyu56op"]

[ext_resource type="Script" uid="uid://qhyvro75bmti" path="res://scenes/guns/base_gun/bullet.gd" id="1_6wip1"]
[ext_resource type="Texture2D" uid="uid://gnbxspyg7ttt" path="res://assets/bullet.png" id="1_k2aps"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k2aps"]
radius = 2.0

[node name="Bullet" type="RigidBody2D"]
collision_layer = 0
collision_mask = 3
mass = 0.001
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_6wip1")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_k2aps")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_k2aps")

[node name="LifetimeTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
